@@ -990,7 +990,7 @@
 2419,0,0,0,0,0,0,5,0,no,0,0,0,none,0,		WM_POEMOFNETHERWORLD,Poem of The Netherworld
 2420,0,0,0,0,0,0,5,0,no,0,0,0,none,0,		WM_VOICEOFSIREN,Voice of Siren
 2421,0,0,0,0,0,0,5,0,no,0,0,0,none,0,		WM_DEADHILLHERE,Valley of Death
-2422,0,0,0,0,0,0,5,0,no,0,0,0,none,0,		WM_LULLABY_DEEPSLEEP,Deep Sleep Lullaby
+2422,8,6,2,0,0X03,11:13:15:19:21,5,1,yes,0,0,0,misc,0,		WM_LULLABY_DEEPSLEEP,Deep Sleep Lullaby
 2423,0,0,0,0,0,0,5,0,no,0,0,0,none,0,		WM_SIRCLEOFNATURE,Circle of Nature's Sound
 2424,0,0,0,0,0,0,5,0,no,0,0,0,none,0,		WM_RANDOMIZESPELL,Improvised Song
 2425,0,0,0,0,0,0,5,0,no,0,0,0,none,0,		WM_GLOOMYDAY,Gloomy Day
